examples/bad/01_1_nonexistent_data_types.soy
a = string;
b = number;
c = float;
d = double;